--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ ul{
   margin: 0;
 
 }
-@media only screen and (max-width: 360px) {
+@media only screen and (min-width: 360px) {
   img{
     border-radius: 10%;
     width: 40px;
