--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ body{
 img{
   width: 40%;
 }
-@media only screen and (max-width:700px){
+@media only screen and (max-width:600px){
   body{
-    background-color:red;
+    background-color: red;
+  }
 }
