--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ img{
 }
 @media only screen and (max-width:600px){
   body{
-    background-color: red;
+    background-color: green;
   }
   .container{
   display: -webkit-flex;
