--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ body{
 }
 .section1{
   width: 30%;
-
+display: -webkit-flex;
+  -webkit-flex-align: center;
+  -webkit-align-items: center;
 }
 .section2{
   width: 70%;
