--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ border-radius: 30px;
 }
 @media only screen and (max-width:600px){
   body{
-    background-color: silver;
+    background-color: pink;
   }
   li{
   margin-left:-40;}
