--- a/style.css
+++ b/style.css
@@ -39,16 +39,16 @@ li a{
 }
 .skils{
   width: 90%;
-  display: flex;
+/*   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-content: space-between;
+  align-content: space-between; */
   margin-left: auto;
   margin-right: auto;
 }
 .skils img{
    width: 30%;
-  display: block;
+   display: inline-block;
   margin-left: auto;
   margin-right: auto;
 }
