--- a/style.css
+++ b/style.css
@@ -83,10 +83,10 @@ border-radius: 30px;
 }
 @media only screen and (max-width:600px){
   body{
-    background-color: white;
+    background-color: lightblue;
   }
   h2{
-    font-size:15px;
+    font-size:12px;
   }
   li{
     margin-left: -40px;
