--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h3{
 
 }
 h4{
-  color: lightblue;
+  color: gray;
 }
 li{
 
@@ -38,19 +38,18 @@ li a{
   color: black;
 }
 .skils{
+
   width: 90%;
-/*   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-content: space-between; */
   margin-left: auto;
   margin-right: auto;
+  position: relative;
 }
 .skils img{
-   width: 30%;
-   display: inline-block;
+  width: 30%;
+  display: inline-block;
   margin-left: auto;
   margin-right: auto;
+  position: relative;
 }
 
 
@@ -58,13 +57,10 @@ li a{
   width: 70%;
   border-left: 2px dotted black;
 }
-/* .div{
-  height: auto;
 
-} */
 .personal_info{
 
-  /* border: 1px solid black; */
+  
   width: 85%;
   display: block;
 margin-left: auto;
